--- a/css/resume.css
+++ b/css/resume.css
@@ -35,6 +35,7 @@
     text-decoration: none;
     border: var(--border-box);
     padding: .75rem 1.5rem;
+    margin-right: 2rem;
     font-size: 1rem;
     font-weight: 700;
     transition: opacity 0.3s ease;
